<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="welcome_subtitle">Plural companion app for assisting your system organization</string>
    <string name="welcome_create_system">Create System</string>
    <string name="welcome_quickstart">Quick Start</string>
</resources>
